--- a/src/pages/graphiql.astro
+++ b/src/pages/graphiql.astro
@@ -2,4 +2,6 @@
 import { GraphiQLWrapper } from "../components/GraphiQLWrapper";
 ---
 
-<GraphiQLWrapper client:only="react" />
+<div style="height: 90vh;">
+  <GraphiQLWrapper client:only="react" />
+</div>
